Fix navbar transparency, underline and spacing

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -21,7 +21,12 @@
 
 #navbar_transparent {
     background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(7px);
+    transition: background 0.5s ease;
+}
+
+/* This class is removed in navbar.js after 992px to match the media query below */
+#navbar_transparent.navbar_open {
+    background: rgba(20, 20, 20);
 }
 
 /* BOTH NAVBARS */
@@ -52,10 +57,15 @@
 
 /* MOBILE VERSION */
 #menu_items {
-    display: none;
-    background: rgba(0, 0, 0, 0);
-    transition: .5s;
-    padding: 10px;
+    transition: min-height 0.5s ease;
+    max-height: 0;
+    min-height: 0;
+    overflow: hidden;
+}
+
+/* This class is removed in navbar.js after 992px to match the media query below */
+#menu_items.navbar_open {
+    min-height: 100vh;
 }
 
 .dropdown_menu {
@@ -66,6 +76,10 @@
     color: white;
 }
 
+.dropdown_menu li:first-child {
+    margin-top: 10px;
+}
+
 #navbar_transparent li {
     margin-bottom: 10px;
 }
@@ -74,7 +88,8 @@
 @media only screen and (min-width: 992px) {
 
     #menu_items {
-        display: block;
+        max-height: 100vh;
+        min-height: auto;
         background-color: rgba(30, 34, 40, 0.0);
     }
 
@@ -101,12 +116,23 @@
         color: #000;
     }
 
-    .nav_item:hover {
-        text-decoration: underline;
+    .dropdown_menu li:first-child {
+        margin-top: 0px;
     }
 
+    .nav_item>a:hover,
     .dropdown_menu li:hover {
-        text-decoration: underline;
+        text-decoration: underline !important;
+        opacity: 0.8;
+    }
+
+    .nav_item>a:hover {
+        text-decoration-color: #fff;
+    }
+
+    .nav_item.has_dropdown>a:hover {
+        text-decoration-color: #fff;
+        cursor: default;
     }
 
     #navbar_transparent li {
